--- a/argo/backend-beta.yaml
+++ b/argo/backend-beta.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: frontend-prod
+  name: backend-beta
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: 'https://github.com/ryanparsa/gitops.git'
     targetRevision: HEAD
-    path: 'frontend/overlays/prod'
+    path: 'projects/backend/beta' 
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: frontend-prod
+    namespace: backend-beta
   syncPolicy:
     automated:
       prune: true
