--- a/argo/frontend-beta.yaml
+++ b/argo/frontend-beta.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: backend-beta
+  name: frontend-beta
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: 'https://github.com/ryanparsa/gitops.git'
     targetRevision: HEAD
-    path: 'backend/overlays/beta'
+    path: 'projects/frontend/beta'
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: backend-beta
+    namespace: frontend-beta
   syncPolicy:
     automated:
       prune: true
