--- a/argo/backend-beta.yaml
+++ b/argo/backend-beta.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: 'https://github.com/ryanparsa/gitops.git'
     targetRevision: HEAD
-    path: 'projects/backend/beta' 
+    path: 'projects/backend/overlays/beta' 
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: backend-beta
