--- a/k8s/backend/base/deployment.yaml
+++ b/k8s/backend/base/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: backend-app
-        image: my-backend-image:latest  # Replace with your image
+        image: nginx:latest
         ports:
         - containerPort: 8080
         envFrom:
