--- a/argo/frontend-beta.yaml
+++ b/argo/frontend-beta.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: 'https://github.com/ryanparsa/gitops.git'
     targetRevision: HEAD
-    path: 'projects/frontend/beta'
+    path: 'k8s/frontend/beta'
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: frontend-beta
